Lade till information och popovers.

--- a/kontakt.html
+++ b/kontakt.html
@@ -26,10 +26,10 @@
                         Produkter
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#hoover">Hoovers</a>
-                        <a class="dropdown-item" href="#dyson">Dyson</a>
-                        <a class="dropdown-item" href="#flakt">Fläktar</a>
-                        <a class="dropdown-item" href="#mikro">Mikrovågsugnar</a>
+                        <a class="dropdown-item" href="hoover.html">Hoovers</a>
+                        <a class="dropdown-item" href="#">Dyson</a>
+                        <a class="dropdown-item" href="#">Fläktar</a>
+                        <a class="dropdown-item" href="#">Mikrovågsugnar</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -79,12 +79,11 @@
 
         <h2 class="h1-responsive font-weight-bold text-center my-4">Kontakta oss!</h2>
         <p class="text-center w-responsive mx-auto mb-5">Ifall du har några frågor om företaget eller våra produkter så
-            är det
-            bara att skicka ett meddelande.
+            är det bara att skicka ett meddelande.
         </p>
-        <div class="d-flex justify-content-center">
-            <form id="contact-form" name="contact-form" action="mail.php" method="POST">
-
+        <div class="d-flex justify-content-center form-group">
+            <form id="contact-form" name="contact-form" action="/" method="POST">
+                
                 <div class="row">
 
                     <div class="col-md-6">
@@ -99,7 +98,6 @@
                             <label for="email" class="">Din email</label>
                         </div>
                     </div>
-
                 </div>
                 <div class="row">
                     <div class="col-md-12">
@@ -185,6 +183,5 @@
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
 <script src="bootstrap.js"></script>
-<script src="bootstrap.bundle.js"></script>
 
 </html>
