--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="card-body">
               <p class="card-text">En av våra prima dammsugare.</p>
               <div class="d-flex justify-content-between align-items-center">
-                <button type="button" class="btn btn-lg btn-outline-primary btn-block">Se produkt</button>
+                <a type="button" class="btn btn-lg btn-outline-primary btn-block" href="hoover.html">Se produkt</a>
               </div>
             </div>
           </div>
