--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand"><img src="bamazon.png" width="80vh"></a>
-    <a class="navbar-brand" href="#">Hem</a>
+    <a class="navbar-brand" href="index.html"><img src="bamazon.png" width="80vh"></a>
+    <a class="navbar-brand" href="index.html">Hem</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -194,6 +194,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
   integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="bootstrap.js"></script>
-<script src="bootstrap.bundle.js"></script>
 
 </html>
