--- a/tjänster.html
+++ b/tjänster.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand"><img src="bamazon.png" width="80vh"></a>
+        <a class="navbar-brand" href="index.html"><img src="bamazon.png" width="80vh"></a>
         <a class="navbar-brand" href="index.html">Hem</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,7 +61,7 @@
                         <div class="card mb-4">
 
                             <div class="card-header p-0 z-depth-1" role="tab" id="heading">
-                                <a class="tagStyle" data-toggle="collapse" data-parent="#accordionEx5" href="#collapse"
+                                <a data-toggle="collapse" data-parent="#accordionEx5" href="#collapse"
                                     aria-expanded="true" aria-controls="collapse">
                                     <i class="fas fa-cloud fa-2x p-3 mr-4 float-left black-text" aria-hidden="true"></i>
                                     <h4 class="mb-0 py-3 mt-1">
@@ -225,7 +225,6 @@
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
 <script src="bootstrap.js"></script>
-<script src="bootstrap.bundle.js"></script>
 
 <script>
     $(function () {
