Lade till ett par "toasts" och omorganiserade bland filerna.

--- a/tjänster.html
+++ b/tjänster.html
@@ -50,7 +50,6 @@
     </nav>
 
     <div class="card card-image" style="background-image: url(./Images/background.jpg);">
-
         <div class="rgba-black-strong py-5 px-4">
             <div class="row d-flex justify-content-center">
                 <div class="col-md-10 col-xl-8">
@@ -69,12 +68,10 @@
                                     </h4>
                                 </a>
                             </div>
-
                             <div id="collapse" class="collapse show" role="tabpanel" aria-labelledby="heading"
                                 data-parent="#accordionEx5">
                                 <div class="card-body rgba-black-light white-text z-depth-1">
                                     <p class="p-md-4 mb-0">”Ett rent och välstädat hem är en fröjd för själen” <br><br>
-
                                         Vid en hemstädning torkar vi av alla köksluckor, bänkar och kakel. Vi torkar ur
                                         mikrovågsugnen och städar brödrosten om den står framme. Vi städar inte inne i
                                         skåpen om du inte speciellt bett om det. Vi städar dusch, badkar, handfat,
@@ -86,8 +83,9 @@
                                         <br><br>
                                         Vill du ha städat på något annat sätt så gör vi det.
                                     </p>
-                                    <a tabindex="0" class="btn btn-lg btn-info" role="button" data-toggle="popover" 
-                                        data-trigger="focus" data-content="Det gör vi!" style="color: white;">Finns vi på din ort? Klicka!</a>
+                                    <a tabindex="0" class="btn btn-lg btn-info" role="button" data-toggle="popover"
+                                        data-trigger="focus" data-content="Det gör vi!" style="color: white;">Finns vi
+                                        på din ort? Klicka!</a>
                                 </div>
                             </div>
                         </div>
@@ -125,13 +123,13 @@
                                     Textilierna blir mjuka och får en behaglig doft.
 
                                     </p>
-                                        <a tabindex="0" class="btn btn-lg btn-info" role="button" data-toggle="popover" 
-                                        data-trigger="focus" data-content="Tyvärr inte." style="color: white;">Finns vi på din ort? Klicka!</a>
+                                    <a tabindex="0" class="btn btn-lg btn-info" role="button" data-toggle="popover"
+                                        data-trigger="focus" data-content="Tyvärr inte." style="color: white;">Finns vi
+                                        på din ort? Klicka!</a>
                                 </div>
                             </div>
                         </div>
                         <div class="card mb-4">
-
                             <div class="card-header p-0 z-depth-1" role="tab" id="heading3">
                                 <a data-toggle="collapse" data-parent="#accordionEx5" href="#collapse3"
                                     aria-expanded="true" aria-controls="collapse3">
@@ -141,7 +139,6 @@
                                     </h4>
                                 </a>
                             </div>
-
                             <div id="collapse3" class="collapse" role="tabpanel" aria-labelledby="heading3"
                                 data-parent="#accordionEx5">
                                 <div class="card-body rgba-black-light white-text z-depth-1">
@@ -152,7 +149,6 @@
                                         en säker plats där du kan lagra dina saker så länge du behöver.
                                         <br><br>
                                     <h4>Varför rensa ut hemma?</h4>
-
                                     <ul>
                                         <li><b>Du drunknar bland dina saker:</b> Har du brist på utrymme eftersom du
                                             omges av saker du för närvarande inte använder? Magasinera dem så kommer du
@@ -167,7 +163,6 @@
                                             dina saker.</li>
                                     </ul>
                                     </p>
-
                                     <h3><br>Tyvärr är inte våra lagringsutrymmen helt klara just nu</h3>
                                     <p>Kom tillbaka när vi är redo att ta emot dig.</p>
                                     <div class="progress">
