--- a/kontakt.html
+++ b/kontakt.html
@@ -50,18 +50,47 @@
         </div>
     </nav>
 
-    <div id="carouselControls" class="carousel slide" data-ride="carousel">
+    <div id="carouselControls" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./Images/nedladdning.png" class="d-block w-100">
-                <h1 class="centered" style="color: rgb(252, 244, 244);">VD över Bamazon</h1>
+                <img src="./Images/Staff/nedladdning.png" class="d-block w-100">
+                <div class="container" aria-live="polite" aria-atomic="true" style=" min-height: 100px;">
+                    <div class="toast toastAlignedRight" id="toast" data-autohide="false">
+                      <div class="toast-header">
+                        <img src="./Images/Flags/India-Flag.png" class="rounded mr-2" style="width: 24px;">
+                        <strong class="mr-auto">Shiv Nadar</strong>
+                        <small>1 timma sedan</small>
+                        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="toast-body">
+                        Hello! My name is Shiv Nadar and I am the chief executive officer of Bamazon.
+                      </div>
+                    </div>
+                  </div>
             </div>
             <div class="carousel-item">
-                <img src="./Images/man.jpg" class="d-block w-100">
-                <h1 class="centered">Revisor</h1>
+                <img src="./Images/Staff/man.jpg" class="d-block w-100">
+                <div class="container" aria-live="polite" aria-atomic="true" style=" min-height: 100px;">
+                    <div class="toast toastAlignedLeft" id="toast2" data-autohide="false">
+                      <div class="toast-header">
+                        <img src="./Images/Flags/afroflag.png" class="rounded mr-2" style="width: 24px;">
+                        <strong class="mr-auto">Lamar Odon</strong>
+                        <small>3 dagar sedan</small>
+                        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="toast-body">
+                        Pleasure to meet you. The name is Lamar, Lamar Odon. My work here is mainly accounting, 
+                        however from time to time I do other things aswell.
+                      </div>
+                    </div>
+                  </div>
             </div>
             <div class="carousel-item">
-                <img src="./Images/woman.jpg" class="d-block w-100">
+                <img src="./Images/Staff/woman.jpg" class="d-block w-100">
                 <h1 class="centered">PR-chef</h1>
             </div>
         </div>
@@ -183,5 +212,12 @@
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
 <script src="bootstrap.js"></script>
+
+<script>
+    $(document).ready(function(){
+        $("#toast").toast('show');
+        $("#toast2").toast('show');
+    });
+    </script>
 
 </html>
