Lade till mer personal och ändrade en alert i hoover.

--- a/hoover.html
+++ b/hoover.html
@@ -49,11 +49,14 @@
         </div>
     </nav>
 
-    <div class="alert alert-primary" role="alert">
-        Nu säljs Dyson dammsugare för 50% av orginalpriset!
+    <div class="alert alert-primary alert-dismissible fade show" role="alert">
+        <p style="margin-bottom: 0;">Just nu får du fri frakt vid köp av ny dammsugare!</p>
+        <button type="button" class="close btn-sm" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
     </div>
 
-    <div class="container">
+    <div class="container my-3">
         <div class="media">
             <img src="./Images/hoover.jpg" class="mr-3 mb-3" width="40%">
             <div class="media-body">
