--- a/kontakt.html
+++ b/kontakt.html
@@ -59,7 +59,7 @@
                       <div class="toast-header">
                         <img src="./Images/Flags/India-Flag.png" class="rounded mr-2" style="width: 24px;">
                         <strong class="mr-auto">Shiv Nadar</strong>
-                        <small>1 timma sedan</small>
+                        <small>1 timma(r) sedan</small>
                         <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                           <span aria-hidden="true">&times;</span>
                         </button>
@@ -91,7 +91,21 @@
             </div>
             <div class="carousel-item">
                 <img src="./Images/Staff/woman.jpg" class="d-block w-100">
-                <h1 class="centered">PR-chef</h1>
+                <div class="container" aria-live="polite" aria-atomic="true" style=" min-height: 100px;">
+                    <div class="toast toastAlignedLeft" id="toast3" data-autohide="false">
+                      <div class="toast-header">
+                        <img src="./Images/Flags/NYFlag.png" class="rounded mr-2" style="width: 24px;">
+                        <strong class="mr-auto">Lisa Thompson</strong>
+                        <small>1 dag(ar) sedan</small>
+                        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="toast-body">
+                        Usually I go by the name Lisa, yet most of the time my colleagues call me "The PR-saviour". You guessed it. I handle the PR front.
+                      </div>
+                    </div>
+                  </div>
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
@@ -104,11 +118,10 @@
         </a>
     </div>
 
-    <section class="mb-4">
-
+    <section class="mb-4 my-lg-n5">
         <h2 class="h1-responsive font-weight-bold text-center my-4">Kontakta oss!</h2>
-        <p class="text-center w-responsive mx-auto mb-5">Ifall du har några frågor om företaget eller våra produkter så
-            är det bara att skicka ett meddelande.
+        <p class="text-center w-responsive mx-auto mb-5">Ifall du har några frågor om företaget eller våra produkter så tveka inte
+            att skicka ett meddelande. <br> Vi finns här för dig.
         </p>
         <div class="d-flex justify-content-center form-group">
             <form id="contact-form" name="contact-form" action="/" method="POST">
@@ -117,35 +130,34 @@
 
                     <div class="col-md-6">
                         <div class="md-form mb-0">
-                            <input type="text" name="name" class="form-control">
                             <label for="name" class="">Ditt namn</label>
+                            <input type="text" name="name" class="form-control">
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="md-form mb-0">
-                            <input type="text" name="email" class="form-control">
                             <label for="email" class="">Din email</label>
+                            <input type="text" name="email" class="form-control">
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="md-form mb-0">
-                            <input type="text" name="subject" class="form-control">
+                        <div class="md-form my-2">
                             <label for="subject" class="">Ämne</label>
+                            <input type="text" name="subject" class="form-control">
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="md-form">
-                            <textarea type="text" name="message" rows="2" class="form-control md-textarea"></textarea>
+                        <div class="md-form my-2">
                             <label for="message">Ditt meddelande</label>
+                            <textarea type="text" name="message" rows="2" class="form-control md-textarea"></textarea>
                         </div>
-
                     </div>
                 </div>
-                <div class="text-center text-md-left">
+                <div class="text-center text-md-left my-2">
                     <a class="btn btn-primary" data-toggle="modal" data-target="#modal">Skicka</a>
                 </div>
             </form>
@@ -217,6 +229,7 @@
     $(document).ready(function(){
         $("#toast").toast('show');
         $("#toast2").toast('show');
+        $("#toast3").toast('show');
     });
     </script>
 
