--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html"><img src="bamazon.png" width="80vh"></a>
+    <a class="navbar-brand" href="index.html"><img src="./Images/Logos/bamazon.png" width="80vh"></a>
     <a class="navbar-brand" href="index.html">Hem</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,7 +64,7 @@
       <div class="row">
         <div class="col-md-4" id="hoover">
           <div class="card mb-4 box-shadow">
-            <img class="card-img-top" src="./Images/hoover.jpg" style="height: 225px; width: 100%; display: block;">
+            <img class="card-img-top" src="./Images/Products/hoover.jpg" style="height: 225px; width: 100%; display: block;">
             <div class="card-body">
               <p class="card-text">En av våra prima dammsugare.</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -75,7 +75,7 @@
         </div>
         <div class="col-md-4" id="dyson">
           <div class="card mb-4 box-shadow">
-            <img class="card-img-top" alt="Thumbnail [100%x225]" src="./Images/dyson.png" data-holder-rendered="true"
+            <img class="card-img-top" src="./Images/Products/dyson.png" data-holder-rendered="true"
               style="height: 225px; width: 100%; display: block;">
             <div class="card-body">
               <p class="card-text">En simpel dyson dammsugare.</p>
@@ -87,7 +87,7 @@
         </div>
         <div class="col-md-4" id="flakt">
           <div class="card mb-4 box-shadow">
-            <img class="card-img-top" src="./Images/flakt.jpg" data-holder-rendered="true"
+            <img class="card-img-top" src="./Images/Products/flakt.jpg" data-holder-rendered="true"
               style="height: 225px; width: 100%; display: block;">
             <div class="card-body">
               <p class="card-text">Testa en av våra nya fläktar idag.</p>
@@ -100,7 +100,7 @@
 
         <div class="col-md-4" id="mikro">
           <div class="card mb-4 box-shadow">
-            <img class="card-img-top" src="./Images/mikro.jpg" data-holder-rendered="true"
+            <img class="card-img-top" src="./Images/Products/mikro.jpg" data-holder-rendered="true"
               style="height: 225px; width: 100%; display: block;">
             <div class="card-body">
               <p class="card-text">Nu med inbyggd klocka!</p>
@@ -112,7 +112,7 @@
         </div>
         <div class="col-md-4" id="reng">
           <div class="card mb-4 box-shadow">
-            <img class="card-img-top" src="./Images/clean.jpg" data-holder-rendered="true"
+            <img class="card-img-top" src="./Images/Products/clean.jpg" data-holder-rendered="true"
               style="height: 225px; width: 100%; display: block;">
             <div class="card-body">
               <p class="card-text">Kanske behöver du hjälp med flytten? Då finns vi här för dig.</p>
@@ -124,7 +124,7 @@
         </div>
         <div class="col-md-4" id="tvatt">
           <div class="card mb-4 box-shadow">
-            <img class="card-img-top" src="./Images/tvatt.jpg" data-holder-rendered="true"
+            <img class="card-img-top" src="./Images/Products/tvatt.jpg" data-holder-rendered="true"
               style="height: 225px; width: 100%; display: block;">
             <div class="card-body">
               <p class="card-text">Förutom att vi städar så sköter vi också tvätt. Klicka för att veta mer.</p>
@@ -136,7 +136,7 @@
         </div>
         <div class="col-md-4" id="lagr">
           <div class="card mb-4 box-shadow">
-            <img class="card-img-top" src="./Images/storage.jpg" data-holder-rendered="true"
+            <img class="card-img-top" src="./Images/Products/storage.jpg" data-holder-rendered="true"
               style="height: 225px; width: 100%; display: block;">
             <div class="card-body">
               <p class="card-text">Dessutom har vi plats för alla dina saker i våra lagringsutrymmen.</p>
@@ -153,7 +153,7 @@
   <footer class="container py-5">
     <div class="row">
       <div class="col-12 col-md">
-        <img src="bamazon.png" width="80vh">
+        <img src="./Images/Logos/bamazon.png" width="80vh">
         <small class="d-block mb-3 text-muted">© 2020</small>
       </div>
       <div class="col-6 col-md">
