--- a/hoover.html
+++ b/hoover.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html"><img src="bamazon.png" width="80vh"></a>
+        <a class="navbar-brand" href="index.html"><img src="./Images/Logos/bamazon.png" width="80vh"></a>
         <a class="navbar-brand" href="index.html">Hem</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +58,7 @@
 
     <div class="container my-3">
         <div class="media">
-            <img src="./Images/hoover.jpg" class="mr-3 mb-3" width="40%">
+            <img src="./Images/Products/hoover.jpg" class="mr-3 mb-3" width="40%">
             <div class="media-body">
                 <h3 class="mt-0">Lectrobux SilentPerformer dammsugare ESP7W360 (vit)</h3>
                 <b>Miljövänliga material</b><br>
@@ -134,7 +134,7 @@
     <footer class="container py-5">
         <div class="row">
             <div class="col-12 col-md">
-                <img src="bamazon.png" width="80vh">
+                <img src="./Images/Logos/bamazon.png" width="80vh">
                 <small class="d-block mb-3 text-muted">© 2020</small>
             </div>
             <div class="col-6 col-md">
