--- a/kontakt.html
+++ b/kontakt.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html"><img src="bamazon.png" width="80vh"></a>
+        <a class="navbar-brand" href="index.html"><img src="./Images/Logos/bamazon.png" width="80vh"></a>
         <a class="navbar-brand" href="index.html">Hem</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -186,7 +186,7 @@
     <footer class="container py-5">
         <div class="row">
             <div class="col-12 col-md">
-                <img src="bamazon.png" width="80vh">
+                <img src="./Images/Logos/bamazon.png" width="80vh">
                 <small class="d-block mb-3 text-muted">© 2020</small>
             </div>
             <div class="col-6 col-md">
