--- a/hoover.html
+++ b/hoover.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!--NAV-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html"><img src="./Images/Logos/bamazon.png" width="80vh"></a>
         <a class="navbar-brand" href="index.html">Hem</a>
@@ -48,6 +49,7 @@
             </ul>
         </div>
     </nav>
+    <!--NAV END-->
 
     <div class="alert alert-primary alert-dismissible fade show" role="alert">
         <p style="margin-bottom: 0;">Just nu får du fri frakt vid köp av ny dammsugare!</p>
@@ -56,6 +58,7 @@
           </button>
     </div>
 
+    <!--PRODUCT-->
     <div class="container my-3">
         <div class="media">
             <img src="./Images/Products/hoover.jpg" class="mr-3 mb-3" width="40%">
@@ -123,6 +126,7 @@
             </tbody>
         </table>
     </div>
+    <!--PRODUCT END-->
 
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
@@ -131,6 +135,8 @@
             <li class="breadcrumb-item active" aria-current="page">Hoover</li>
         </ol>
     </nav>
+
+    <!--FOOTER-->
     <footer class="container py-5">
         <div class="row">
             <div class="col-12 col-md">
@@ -163,7 +169,9 @@
             </div>
         </div>
     </footer>
+    <!--FOOTER END-->
 </body>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
@@ -171,8 +179,6 @@
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
 <script src="bootstrap.js"></script>
-
-
 
 <script>
     $('.popover-dismiss').popover({
