--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
-
-
+  <!--NAV-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="index.html"><img src="./Images/Logos/bamazon.png" width="80vh"></a>
     <a class="navbar-brand" href="index.html">Hem</a>
@@ -50,6 +49,7 @@
       </ul>
     </div>
   </nav>
+<!--NAV END-->
 
   <section class="jumbotron text-center">
     <div class="container">
@@ -59,6 +59,7 @@
     </div>
   </section>
 
+  <!--PRODUCTS-->
   <div class="album py-5 bg-light">
     <div class="container">
       <div class="row">
@@ -97,7 +98,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-md-4" id="mikro">
           <div class="card mb-4 box-shadow">
             <img class="card-img-top" src="./Images/Products/mikro.jpg" data-holder-rendered="true"
@@ -149,7 +149,9 @@
       </div>
     </div>
   </div>
+  <!--PRODUCTS END-->
 
+  <!--FOOTER-->
   <footer class="container py-5">
     <div class="row">
       <div class="col-12 col-md">
@@ -182,9 +184,10 @@
       </div>
     </div>
   </footer>
-
+<!--FOOTER END-->
 
 </body>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
   integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
