--- a/kontakt.html
+++ b/kontakt.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!--NAV-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html"><img src="./Images/Logos/bamazon.png" width="80vh"></a>
         <a class="navbar-brand" href="index.html">Hem</a>
@@ -49,7 +50,9 @@
             </ul>
         </div>
     </nav>
+    <!--NAV END-->
 
+    <!--SLIDE SHOW-->
     <div id="carouselControls" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -92,7 +95,7 @@
             <div class="carousel-item">
                 <img src="./Images/Staff/woman.jpg" class="d-block w-100">
                 <div class="container" aria-live="polite" aria-atomic="true" style=" min-height: 100px;">
-                    <div class="toast toastAlignedLeft" id="toast3" data-autohide="false">
+                    <div class="toast toastAlignedRight" id="toast3" data-autohide="false">
                       <div class="toast-header">
                         <img src="./Images/Flags/NYFlag.png" class="rounded mr-2" style="width: 24px;">
                         <strong class="mr-auto">Lisa Thompson</strong>
@@ -117,7 +120,9 @@
             <span class="sr-only">Nästa</span>
         </a>
     </div>
+    <!--SLIDE SHOW END-->
 
+    <!--FORM-->
     <section class="mb-4 my-lg-n5">
         <h2 class="h1-responsive font-weight-bold text-center my-4">Kontakta oss!</h2>
         <p class="text-center w-responsive mx-auto mb-5">Ifall du har några frågor om företaget eller våra produkter så tveka inte
@@ -163,7 +168,9 @@
             </form>
         </div>
     </section>
+    <!--FORM END-->
 
+    <!--MODAL FORM-->
     <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -182,7 +189,9 @@
             </div>
         </div>
     </div>
+    <!--MODAL FORM END-->
 
+    <!--FOOTER-->
     <footer class="container py-5">
         <div class="row">
             <div class="col-12 col-md">
@@ -215,6 +224,7 @@
             </div>
         </div>
     </footer>
+    <!--FOOTER END-->
 </body>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
