--- a/tjänster.html
+++ b/tjänster.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!--NAV-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html"><img src="./Images/Logos/bamazon.png" width="80vh"></a>
         <a class="navbar-brand" href="index.html">Hem</a>
@@ -48,17 +49,16 @@
             </ul>
         </div>
     </nav>
+    <!--NAV END-->
 
+    <!--PRODUCTS-->
     <div class="card card-image" style="background-image: url(./Images/background.jpg);">
         <div class="rgba-black-strong py-5 px-4">
             <div class="row d-flex justify-content-center">
                 <div class="col-md-10 col-xl-8">
-
                     <div class="accordion md-accordion accordion-5" id="accordionEx5" role="tablist"
                         aria-multiselectable="true">
-
                         <div class="card mb-4">
-
                             <div class="card-header p-0 z-depth-1" role="tab" id="heading">
                                 <a data-toggle="collapse" data-parent="#accordionEx5" href="#collapse"
                                     aria-expanded="true" aria-controls="collapse">
@@ -90,7 +90,6 @@
                             </div>
                         </div>
                         <div class="card mb-4">
-
                             <div class="card-header p-0 z-depth-1" role="tab" id="heading2">
                                 <a data-toggle="collapse" data-parent="#accordionEx5" href="#collapse2"
                                     aria-expanded="true" aria-controls="collapse2">
@@ -101,7 +100,6 @@
                                     </h4>
                                 </a>
                             </div>
-
                             <div id="collapse2" class="collapse" role="tabpanel" aria-labelledby="heading2"
                                 data-parent="#accordionEx5">
                                 <div class="card-body rgba-black-light white-text z-depth-1">
@@ -116,12 +114,10 @@
                                         <li>Brudklänningar</li>
                                         <li>Etc.</li>
                                     </ul>
-
                                     System HiGloo är ett miljöanpassat och säkert
                                     tvättsystem som inte har några negativa effekter på vare sig luft, vatten, mark
                                     eller människor.
                                     Textilierna blir mjuka och får en behaglig doft.
-
                                     </p>
                                     <a tabindex="0" class="btn btn-lg btn-info" role="button" data-toggle="popover"
                                         data-trigger="focus" data-content="Tyvärr inte." style="color: white;">Finns vi
@@ -148,20 +144,20 @@
                                         Men detta behöver inte vara besvärligt om du magasinerar. Magasinering ger dig
                                         en säker plats där du kan lagra dina saker så länge du behöver.
                                         <br><br>
-                                    <h4>Varför rensa ut hemma?</h4>
-                                    <ul>
-                                        <li><b>Du drunknar bland dina saker:</b> Har du brist på utrymme eftersom du
-                                            omges av saker du för närvarande inte använder? Magasinera dem så kommer du
-                                            att känna en börda lyftas från dina axlar. </li>
-                                        <li><b>Du går i säljtankar:</b> Du kanske vill rensa ut bland sakerna så att
-                                            spekulanterna ser ditt hem från dess bästa sida? Om du får rummen att kännas
-                                            rymligare genom att rensa ut och magasinera, kan det snabba på
-                                            försäljningen. </li>
-                                        <li><b>Du flyttar till något mindre:</b> Du vill flytta till något mindre men
-                                            finner tanken på att göra dig av med gamla släktklenoder outhärdlig? Du
-                                            behöver inte skiljas från något du egentligen vill behålla om du magasinerar
-                                            dina saker.</li>
-                                    </ul>
+                                        <h4>Varför rensa ut hemma?</h4>
+                                        <ul>
+                                            <li><b>Du drunknar bland dina saker:</b> Har du brist på utrymme eftersom du
+                                                omges av saker du för närvarande inte använder? Magasinera dem så kommer du
+                                                att känna en börda lyftas från dina axlar. </li>
+                                            <li><b>Du går i säljtankar:</b> Du kanske vill rensa ut bland sakerna så att
+                                                spekulanterna ser ditt hem från dess bästa sida? Om du får rummen att kännas
+                                                rymligare genom att rensa ut och magasinera, kan det snabba på
+                                                försäljningen. </li>
+                                            <li><b>Du flyttar till något mindre:</b> Du vill flytta till något mindre men
+                                                finner tanken på att göra dig av med gamla släktklenoder outhärdlig? Du
+                                                behöver inte skiljas från något du egentligen vill behålla om du magasinerar
+                                                dina saker.</li>
+                                        </ul>
                                     </p>
                                     <h3><br>Tyvärr är inte våra lagringsutrymmen helt klara just nu</h3>
                                     <p>Kom tillbaka när vi är redo att ta emot dig.</p>
@@ -177,7 +173,9 @@
             </div>
         </div>
     </div>
+    <!--PRODUCTS END-->
 
+    <!--FOOTER-->
     <footer class="container py-5">
         <div class="row">
             <div class="col-12 col-md">
@@ -210,8 +208,8 @@
             </div>
         </div>
     </footer>
+    <!--FOOTER END-->
 </body>
-
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
