Lade till favicon och formaterade koden.

--- a/hoover.html
+++ b/hoover.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bamazon</title>
     <link rel="stylesheet" href="bootstrap.css">
@@ -55,7 +57,7 @@
         <p style="margin-bottom: 0;">Just nu får du fri frakt vid köp av ny dammsugare!</p>
         <button type="button" class="close btn-sm" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
-          </button>
+        </button>
     </div>
 
     <!--PRODUCT-->
@@ -87,8 +89,8 @@
                 <br><br>
             </div>
         </div>
-              <a tabindex="0" class="btn btn-lg btn-success float-right mb-3" role="button" data-toggle="popover" 
-              data-trigger="focus" data-content="Tillagd i kundvagnen!">Lägg till i kundvagnen?</a>
+        <a tabindex="0" class="btn btn-lg btn-success float-right mb-3" role="button" data-toggle="popover"
+            data-trigger="focus" data-content="Tillagd i kundvagnen!">Lägg till i kundvagnen?</a>
         <table class="table">
             <thead class="thead-dark">
                 <th colspan="2">Modellbeskrivning</th>
