--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bamazon</title>
   <link rel="stylesheet" href="bootstrap.css">
@@ -49,7 +51,7 @@
       </ul>
     </div>
   </nav>
-<!--NAV END-->
+  <!--NAV END-->
 
   <section class="jumbotron text-center">
     <div class="container">
@@ -65,7 +67,8 @@
       <div class="row">
         <div class="col-md-4" id="hoover">
           <div class="card mb-4 box-shadow">
-            <img class="card-img-top" src="./Images/Products/hoover.jpg" style="height: 225px; width: 100%; display: block;">
+            <img class="card-img-top" src="./Images/Products/hoover.jpg"
+              style="height: 225px; width: 100%; display: block;">
             <div class="card-body">
               <p class="card-text">En av våra prima dammsugare.</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -184,7 +187,7 @@
       </div>
     </div>
   </footer>
-<!--FOOTER END-->
+  <!--FOOTER END-->
 
 </body>
 
