--- a/kontakt.html
+++ b/kontakt.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bamazon</title>
-
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="main.css">
 </head>
@@ -59,56 +60,57 @@
                 <img src="./Images/Staff/nedladdning.png" class="d-block w-100">
                 <div class="container" aria-live="polite" aria-atomic="true" style=" min-height: 100px;">
                     <div class="toast toastAlignedRight" id="toast" data-autohide="false">
-                      <div class="toast-header">
-                        <img src="./Images/Flags/India-Flag.png" class="rounded mr-2" style="width: 24px;">
-                        <strong class="mr-auto">Shiv Nadar</strong>
-                        <small>1 timma(r) sedan</small>
-                        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                      <div class="toast-body">
-                        Hello! My name is Shiv Nadar and I am the chief executive officer of Bamazon.
-                      </div>
+                        <div class="toast-header">
+                            <img src="./Images/Flags/India-Flag.png" class="rounded mr-2" style="width: 24px;">
+                            <strong class="mr-auto">Shiv Nadar</strong>
+                            <small>1 timma(r) sedan</small>
+                            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="toast-body">
+                            Hello! My name is Shiv Nadar and I am the chief executive officer of Bamazon.
+                        </div>
                     </div>
-                  </div>
+                </div>
             </div>
             <div class="carousel-item">
                 <img src="./Images/Staff/man.jpg" class="d-block w-100">
                 <div class="container" aria-live="polite" aria-atomic="true" style=" min-height: 100px;">
-                    <div class="toast toastAlignedLeft" id="toast2" data-autohide="false">
-                      <div class="toast-header">
-                        <img src="./Images/Flags/afroflag.png" class="rounded mr-2" style="width: 24px;">
-                        <strong class="mr-auto">Lamar Odon</strong>
-                        <small>3 dagar sedan</small>
-                        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                      <div class="toast-body">
-                        Pleasure to meet you. The name is Lamar, Lamar Odon. My work here is mainly accounting, 
-                        however from time to time I do other things aswell.
-                      </div>
+                    <div class="toast toastAlignedRight" id="toast2" data-autohide="false">
+                        <div class="toast-header">
+                            <img src="./Images/Flags/afroflag.png" class="rounded mr-2" style="width: 24px;">
+                            <strong class="mr-auto">Lamar Odon</strong>
+                            <small>3 dagar sedan</small>
+                            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="toast-body">
+                            Pleasure to meet you. The name is Lamar, Lamar Odon. My work here is mainly accounting,
+                            however from time to time I do other things aswell.
+                        </div>
                     </div>
-                  </div>
+                </div>
             </div>
             <div class="carousel-item">
                 <img src="./Images/Staff/woman.jpg" class="d-block w-100">
                 <div class="container" aria-live="polite" aria-atomic="true" style=" min-height: 100px;">
                     <div class="toast toastAlignedRight" id="toast3" data-autohide="false">
-                      <div class="toast-header">
-                        <img src="./Images/Flags/NYFlag.png" class="rounded mr-2" style="width: 24px;">
-                        <strong class="mr-auto">Lisa Thompson</strong>
-                        <small>1 dag(ar) sedan</small>
-                        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                      <div class="toast-body">
-                        Usually I go by the name Lisa, yet most of the time my colleagues call me "The PR-saviour". You guessed it. I handle the PR front.
-                      </div>
+                        <div class="toast-header">
+                            <img src="./Images/Flags/NYFlag.png" class="rounded mr-2" style="width: 24px;">
+                            <strong class="mr-auto">Lisa Thompson</strong>
+                            <small>1 dag(ar) sedan</small>
+                            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="toast-body">
+                            Usually I go by the name Lisa, yet most of the time my colleagues call me "The PR-saviour".
+                            You guessed it. I handle the PR front.
+                        </div>
                     </div>
-                  </div>
+                </div>
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
@@ -125,12 +127,13 @@
     <!--FORM-->
     <section class="mb-4 my-lg-n5">
         <h2 class="h1-responsive font-weight-bold text-center my-4">Kontakta oss!</h2>
-        <p class="text-center w-responsive mx-auto mb-5">Ifall du har några frågor om företaget eller våra produkter så tveka inte
+        <p class="text-center w-responsive mx-auto mb-5">Ifall du har några frågor om företaget eller våra produkter så
+            tveka inte
             att skicka ett meddelande. <br> Vi finns här för dig.
         </p>
         <div class="d-flex justify-content-center form-group">
             <form id="contact-form" name="contact-form" action="/" method="POST">
-                
+
                 <div class="row">
 
                     <div class="col-md-6">
@@ -236,11 +239,11 @@
 <script src="bootstrap.js"></script>
 
 <script>
-    $(document).ready(function(){
+    $(document).ready(function () {
         $("#toast").toast('show');
         $("#toast2").toast('show');
         $("#toast3").toast('show');
     });
-    </script>
+</script>
 
 </html>
